--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(shape_matching)
 set(CMAKE_CXX_STANDARD 11)
 
 option(USE_MIPP "Whether use MIPP library" ON)
+option(USE_CUDA "Whether use CUDA library" OFF)
 
 if (WIN32)
 find_package(OpenCV REQUIRED
@@ -17,18 +18,10 @@ find_package(OpenCV 3.2.0 EXACT REQUIRED
 endif()
 
 
-add_library(shape_matching feature.cpp feature_util.cpp
-       	 	pyramid.cpp matching.cpp response_map.cpp similarity.cpp)
-target_link_libraries(shape_matching PUBLIC ${OpenCV_LIBS})
-
-if (USE_MIPP)
-    add_definitions(-DUSE_MIPP)
-    SET(CMAKE_CXX_FLAGS "-march=native")
-    target_include_directories(shape_matching PUBLIC ${CMAKE_SOURCE_DIR}/mipp)
-endif()
-
-add_subdirectory(test)
-
+add_subdirectory(src)
 
 add_executable(demo main.cpp)
-target_link_libraries(demo shape_matching)
+target_link_libraries(demo shape_matching cuda_icp)
+
+add_subdirectory(test)
+add_subdirectory(self_test)
