--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ set(target_list test_nms test_feature test_spread
 foreach(target ${target_list})
     add_executable(${target} ${target}.cpp test_util.cpp)
     target_link_libraries(${target} shape_matching)
+    target_include_directories(${target} PRIVATE ${CMAKE_SOURCE_DIR}/src)
 endforeach()
 
 add_executable(test_mipp test_mipp.cpp)
