add support for read/write configuration file and class pyramid file.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 set(target_list test_nms test_feature test_spread 
     test_response test_angle_scale_pair test_linearize
-    test_similarity)
+    test_similarity test_readwrite)
 
 foreach(target ${target_list})
     add_executable(${target} ${target}.cpp test_util.cpp)
